force-app/main/default/objects/Used_Medicine_Item__c/Used_Medicine_Item__c.object-meta.xml
<CustomObject>
    <label>Used Medicine Item</label>
    <nameField>
        <label>Used Medicine Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Used Medicine Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>