force-app/main/default/objects/Used_Medicine_Item__c/fields/Medicine_Item__c.field-meta.xml
<CustomField>
    <fullName>Medicine_Item__c</fullName>
    <label>Medicine Item</label>
    <referenceTo>Medicine_Item__c</referenceTo>
    <relationshipLabel>Used Medicine Items</relationshipLabel>
    <relationshipName>Used_Medicine_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>