force-app/main/default/objects/Used_Medicine_Item__c/fields/Treatment_Couse_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Treatment_Couse_Engagement__c</fullName>
    <label>Treatment Couse Engagement</label>
    <referenceTo>Treatment_Course_Engagement__c</referenceTo>
    <relationshipLabel>Used Medicine Items</relationshipLabel>
    <relationshipName>Used_Medicine_Items</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>