force-app/main/default/objects/Used_Medicine_Item__c/fields/Used_doses__c.field-meta.xml
<CustomField>
    <fullName>Used_doses__c</fullName>
    <label>Used doses</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>