force-app/main/default/objects/Used_Medicine_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Medicine_Item__c</columns>
    <columns>Used_doses__c</columns>
    <columns>Treatment_Couse_Engagement__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>